<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/rates_list_recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bank_header"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bank_header"
                android:paddingStart="10dp"
                style="@style/itemTextStyle"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/usd_buy_header"
                android:text="@string/usd_buy_header"
                style="@style/itemTextStyle"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/usd_sell_header"
                android:text="@string/usd_sell_header"
                style="@style/itemTextStyle"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/eur_buy_header"
                android:text="@string/eur_buy_header"
                style="@style/itemTextStyle"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/eur_sell_header"
                android:text="@string/eur_sell_header"
                style="@style/itemTextStyle"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rates_list_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:layout="@layout/rates_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>